# army-bot

./: LICENSE  README.md  bot.py  config.py  error_handling.py  main.py  pyproject.toml  requirements.txt  texts.py
cogs/: admin.py  auto_dismissal.py  blacklist.py  daily_announce.py  dismissal.py  leave.py  logistics.py  materials.py  members.py  promotion.py  reinstatement.py  role_getting.py  sso_patrol.py  supplies.py  supplies_audit.py  timeoff.py  transfers.py  user_edit.py
database/: __init__.py  connection.py  counters.py  division.py  models.py  status.py
ui/modals/: dismissal.py  labels.py  leave.py  logistics.py  materials.py  promotion.py  reinstatement.py  role_getting.py  sso_patrol.py  static_input.py  supplies.py  supplies_audit.py  timeoff.py  transfers.py
ui/views/: __init__.py  dismissal.py  indicators.py  leave.py  logistics.py  materials.py  promotion.py  reinstatement.py  role_getting.py  sso_patrol.py  supplies.py  supplies_audit.py  timeoff.py  transfers.py
utils/: audit.py  bottom_message.py  dismissal_logic.py  exceptions.py  mongo_lock.py  notifications.py  permissions.py  roles.py  sso_questions.py  user_data.py
